litesqlincludedir=$(includedir)/litesql
litesqlinclude_HEADERS=backend.hpp     except.hpp  operations.hpp  selectquery.hpp  types.hpp  cursor.hpp      expr.hpp    persistent.hpp  split.hpp        updatequery.hpp  database.hpp    field.hpp   utils.hpp  datasource.hpp  relation.hpp    string.hpp datetime.hpp
